--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
     --card-foreground: 224 71.4% 4.1%;
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
-    --primary: 217 91% 60%;
+    --primary: 262.1 83.3% 57.8%;
     --primary-foreground: 210 20% 98%;
     --secondary: 220 14.3% 95.9%;
     --secondary-foreground: 220.9 39.3% 11%;
@@ -22,8 +22,8 @@
     --destructive-foreground: 210 20% 98%;
     --border: 220 13% 91%;
     --input: 220 13% 91%;
-    --ring: 217 91% 60%;
-    --chart-1: 217 91% 60%;
+    --ring: 262.1 83.3% 57.8%;
+    --chart-1: 262, 83%, 58%;
     --chart-2: 16, 84%, 60%;
     --chart-3: 34, 91%, 60%;
     --chart-4: 284, 71%, 65%;
@@ -45,7 +45,7 @@
     --card-foreground: 210 20% 98%;
     --popover: 224 71.4% 4.1%;
     --popover-foreground: 210 20% 98%;
-    --primary: 217 91% 60%;
+    --primary: 262.1 83.3% 57.8%;
     --primary-foreground: 210 20% 98%;
     --secondary: 215 27.9% 16.9%;
     --secondary-foreground: 210 20% 98%;
@@ -57,8 +57,8 @@
     --destructive-foreground: 210 20% 98%;
     --border: 215 27.9% 16.9%;
     --input: 215 27.9% 16.9%;
-    --ring: 217 91% 60%;
-    --chart-1: 217 91% 60%;
+    --ring: 262.1 83.3% 57.8%;
+    --chart-1: 262, 83%, 58%;
     --chart-2: 16, 84%, 60%;
     --chart-3: 34, 91%, 60%;
     --chart-4: 284, 71%, 65%;
